# embed_project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  catalog.json  configure_deepseek_api.ps1  configure_volcengine_asr.ps1  register_real_barcode.ps1  start_board_asr_proxy.ps1  start_board_voice_assistant.sh  start_final_demo.cmd  start_final_demo.ps1  start_visual_lvds_demo.cmd  start_visual_lvds_demo.ps1  start_voice_assistant_demo.cmd  start_voice_assistant_demo.ps1  start_voice_assistant_demo.sh  start_voice_mic_query_demo.cmd  start_voice_mic_query_demo.ps1  start_voice_mic_query_loop.cmd  start_voice_mic_query_loop.ps1  test_deepseek_api.ps1  test_volcengine_asr.ps1  商品识别测试记录.md  最终演示流程与应急卡.md  条形码识别测试说明.md  演示说明.md  语音播报软件层说明.md  语音查询与智能回复说明.md  语音查询功能测试方案.md  项目当前进度.md
assets/: payment_alipay.bgra  payment_wechat.bgra
barcodes/: README.txt
board_backup/: qr_scanner_display.c.original  qr_scanner_display.original
board_config/: weston.sh
data/: barcode_aliases.csv  products.csv
docs/: VSCode_WSL_QR配置与运行.md  二次开发使用文档.md  对话交接记录_2026-07-04.md  智能售货机界面与人机交互设计.md  智能售货系统脚本使用说明.md  板端长期语音问答启动.md  火山ASR语音问答配置.md  脚本执行流程.md
include/: answer_engine.hpp  cart.hpp  catalog.hpp  cloud_asr.hpp  cloud_llm.hpp  cloud_tts.hpp  microphone_driver.hpp  payment.hpp  product.hpp  recognizer.hpp  voice.hpp
patched/: qr_scanner_display
recognition_test/: predictions.csv  report.txt
scripts/: camera_preview_lvds.sh  configure_board_voice_speaker.sh  configure_board_wifi.sh  connect_wifi.sh  demo_lvds_start.sh  install_boot_autostart.sh  payment_done_enter.sh  (+10 more)
(+131 files in other folders)
